Update authentication, JWT, cashier, product service, and mail utility